Fixed UI of Training module path overlaping with Table of contents

--- a/app/assets/stylesheets/training_modules/_nav.styl
+++ b/app/assets/stylesheets/training_modules/_nav.styl
@@ -42,6 +42,7 @@ body.training nav.top-nav
 
 .training__show
   ol.breadcrumbs
+    width 66%
     @extends .breadcrumbs
     margin-bottom -23px
     li
